--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,14 @@ jobs:
     strategy:
         matrix:
           orjson-version: ["3.8.3", "3.8.4", "3.8.5"]
+          python-version: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8.14
+          python-version: ${{ matrix.python-version }}
 
       - name: Install
         run: |
@@ -31,7 +32,7 @@ jobs:
       - name: Report
         run: |
           set +e
-          echo "## ORJSON ${{ matrix.orjson-version }}" >> $GITHUB_STEP_SUMMARY
+          echo "## ORJSON ${{ matrix.orjson-version }} Py ${{ matrix.python-version }}" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
           cat sample.txt >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
