--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
         matrix:
           orjson-version: ["3.8.3", "3.8.4", "3.8.5"]
-          python-version: ["3.7", "3.8", "3.9", "3.10"]
+          python-version: ["3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v3
